[package]
name = "XGEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ShaderManager"
]

[dependencies]
event-bus = { git = "https://github.com/XglockMan/event-bus.git" }
glfw = "0.51.0"
raw-window-handle = "0.5.0"
bgfx-rs = "0.14.0"
glam = "0.23.0"
uuid = "1.3.0"