[package]
name = "XGEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/ExampleImplementation"]

[dependencies]

event-bus = { git = "https://github.com/XglockMan/event-bus.git" }
glfw = "0.51.0"
raw-window-handle = "0.5.0"
bgfx-rs = "0.14.0"
glam = "0.23.0"
uuid = "1.3.0"
image = "0.24.6"
log = "0.4.17"
wgpu = "0.18"
pollster = "0.3"
bytemuck = "1.15.0"
