

[workspace]
members = ["examples/object-scene", "crates/core"]

[workspace.dependencies]

#members
core = { path = "crates/core" }
cube-scene = { path = "examples/cube-scene" }

#external
event-bus = { git = "https://github.com/XglockMan/event-bus.git" }
glfw = "0.51.0"
raw-window-handle = "0.5.0"
bgfx-rs = "0.14.0"
glam = "0.23.0"
uuid = "1.3.0"
image = "0.24.6"
log = "0.4.17"
