[package]
name = "object-scene-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core.workspace = true
glfw.workspace = true
glam.workspace = true
event-bus.workspace = true
bgfx-rs.workspace = true
